--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "dotenv": "^16.0.1",
     "esm": "^3.2.25",
     "express": "^4.18.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "pg": "^8.7.3",
+    "sequelize": "^6.20.1"
   }
 }
