--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/dmunozmauro/backend-node#readme",
   "dependencies": {
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
     "esm": "^3.2.25",
     "express": "^4.18.1",
+    "nodemon": "^2.0.16",
     "path": "^0.12.7",
     "pg": "^8.7.3",
     "sequelize": "^6.20.1"
